<resources>
    <string name="app_name">Geo Challenger</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_create_path">CreatePathActivity</string>
    <string name="unknown">Unknown</string>
    <string name="dialog_create_route_message">Please enter route name</string>
    <string name="dialog_create_route_title">Create route</string>
    <string name="dialog_create_route_positive">Create</string>
    <string name="dialog_create_route_negative">Cancel</string>
    <string name="dialog_positive">Ok</string>
    <string name="create_route_pois_count">%d POINTS</string>
    <string name="checking_title">Check via geotagging</string>
    <string name="checking_description">You shoud be on this POI to pass a challenge by geotagging</string>
    <string name="check_button">Check</string>
    <string name="checking_points">+10 points</string>
    <string name="challenge_checkin_complete_title">SUCCESS!</string>
    <string name="challenge_checkin_complete_description">You got 10 points</string>
</resources>
